[gd_scene load_steps=2 format=3 uid="uid://djr57vch4s2c7"]

[ext_resource type="Script" path="res://interfaces/start_menu.gd" id="1_jdm3r"]

[node name="StartMenu" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jdm3r")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "The Space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="mods" type="Button" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "UI_MODS"

[node name="major" type="VBoxContainer" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="new_game" type="Button" parent="buttons/major"]
layout_mode = 2
size_flags_vertical = 3
text = "UI_NEW_GAME"

[node name="load_game" type="Button" parent="buttons/major"]
layout_mode = 2
size_flags_vertical = 3
text = "UI_LOAD_GAME"

[node name="game_settings" type="Button" parent="buttons/major"]
layout_mode = 2
size_flags_vertical = 3
text = "UI_GAME_SETTINGS"

[node name="exit_game" type="Button" parent="buttons/major"]
layout_mode = 2
size_flags_vertical = 3
text = "UI_EXIT_GAME"

[node name="help" type="Button" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "UI_HELP"

[connection signal="pressed" from="buttons/mods" to="." method="_on_mods_pressed"]
[connection signal="pressed" from="buttons/major/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="buttons/major/load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="buttons/major/game_settings" to="." method="_on_game_settings_pressed"]
[connection signal="pressed" from="buttons/major/exit_game" to="." method="_on_exit_game_pressed"]
[connection signal="pressed" from="buttons/help" to="." method="_on_help_pressed"]
